# sfslite

./: .cvsignore  .gitignore  ChangeLog  INSTALL  Makefile.am  README  README.0.7-upgrade  README.md  STANDARDS  SYNCING  TODO  acinclude.m4  aclocal.m4  acsfs.m4  autoconf.sed  cfg  config.h.in  configure  configure.in  kcc  nfsconf.h  setup  setup.gnu
0.8.16pre1/: README
0.8.16pre1/arpc/: aclnt.C  aclnt.h  asrv.C  axprt.h  axprt_stream.C  axprt_unix.C
0.8.16pre1/async/: Makefile.am  arena.h  async.h  callback.h  core.C  daemonize.C  dns.C  myname.C  qtailq.h  stllike.h  straux.C
0.8.16pre1/libsfs/: Makefile.am.m4  auth_helper_common.c  xdr_suio.c
0.8.16pre1/libtame/: Makefile.am.m4  lock.T  pipeline.T
0.8.16pre1/sfsmisc/: closesim.C  mallock.C  rexcommon.C  rexcommon.h  sfsaid.C  sfsconst.C  sfsgroupmgr.C
0.8.16pre1/svc/: nfs3_ext.x  nfs3exp_prot.x  rex_prot.x  sfsauth_prot.x
0.8.16pre1/tame/: parse.yy
0.8.16pre1/tutorial/: bench1.T  buggy10.T  buggy1b.T  buggy1c.T  buggy2.T  buggy3.T  ex10.T  ex3b.T  ex5.T  ex9.T
0.8.5pre1/: ChangeLog  INSTALL.darwin  README
0.8.5pre1/crypt/: password.h
0.8.5pre1/libsfs/: xdr_suio.h
0.8.5pre1/rpcc/: genpython.C
0.8.5pre1/sfslite2/: Makefile.am
0.8.5pre1/sfsmisc/: unixserv.C
0.8.5pre1/tutorial/: ex4.T  ex5.T
0.8.5pre2/: acinclude.m4
0.8.5pre2.t/sfslite2/: configure.in
0.8.5pre2/crypt/: rsa.h  xdr_mpz_t.C
0.8.5pre2/sfslite2/: SYNCING
0.8.5pre2/sfsmisc/: agentmisc.h
0.8.5pre2/tests/: test_aiod.C  test_axprt.C  test_backoff.C
0.8.5pre3/: ChangeLog  configure.in
0.8.5pre3/arpc/: pmap_prot.x  xdr_suio.h
0.8.5pre3/async/: tame.h
0.8.5pre3/crypt/: axprt_crypt.C  prime.h  (+1 more)
0.8.5pre4/: configure.in
0.8.7pre2/: cfg  setup.gnu
0.8.8pre1/: acinclude.m4
0.8.9pre3/: configure.in
1.0.0pre1/: acsfs.m4  configure.in
1.0.0pre2/: Makefile.am  acsfs.m4  autoconf.sed  configure.in
1.1.3pre1/: ChangeLog  acinclude.m4  acsfs.m4  autoconf.sed
1.1.3pre1/arpc/: Makefile.am  acallrpc.C  aclnt.C  aclnt.h  asrv.C  asrv.h
arpc/: Makefile.am  acallrpc.C  aclnt.C  aclnt.h  arpc.h  asrv.C  asrv.h  authopaque.C  authuint.C  authunixint.c  axprt.h  axprt_dgram.C  axprt_pipe.C  axprt_stream.C  axprt_unix.C  clone.C  extensible_arpc.C  extensible_arpc.h  rpc_stats.C  rpc_stats.h  rpctypes.h  xdr_suio.C  xdr_suio.h  xdrmisc.C  xdrmisc.h  xhinfo.C  xhinfo.h
arpcgen/: rpc_cout.c  rpc_hout.c  rpc_main.c  rpc_tblout.c  rpc_util.h
async/: Makefile.am  aerr.C  aio.C  aiod.C  aiod.h  aiod_prot.h  aios.C  aios.h  alog2.C  alog2.h  amisc.h  arandom.c  arena.C  arena.h  armor.C  async.h  backoff.h  bbuddy.h  bitvec.h  bundle.C  callback.h  callback2.h  cbuf.h  cgc.C  cgc.h  cgc2-impl.h  cgc2.C  cgc2.h  const.C  convertint.C  coordvar.C  core.C  daemonize.C  dftables.c  dns.C  dns.h  dnsimpl.h  dnsparse.C  dnsparse.h  dynenum.C  (+80 more)
contrib/: mk-sfsuser-freebsd.sh  rtftpd.sh
crypt/: Makefile.am  arc4.C  arc4.h  axprt_crypt.C  axprt_crypt.h  bigint.h  blowfish.C  blowfish.h  crypt.h  crypt_prot.x  crypthash.h  dsa.C  esign.C  esign.h  getkbdnoise.C  getsysnoise.C  modalg.C  mpscrub.C  mpz_misc.C  mpz_raw.C  mpz_xor.C  ocb.C  ocb.h  paillier.C  password.C  pm.C  pm.h  prng.h  rabin.h  rabin_fprint.C  rabinpoly.C  rabinpoly.h  random_prime.C  rndseed.C  rsa.C  rsa.h  seqno.C  serial.C  sha1.C  sha1.h  (+7 more)
doc/: libasync.ps  manpager.pl
libaapp/: Makefile.am  aapp.h  aapp_prot.x  accept.C  logger.T  sfs_logger.h
libsafeptr/: Makefile.am  cgc.h  gc.C  gc_str.C  safeptr.h  sp_gc.h  sp_gc_impl.h  sp_wkref.h
libsfs/: Makefile.am.m4  auth_helper_pam.c  devcon.c  hashtab.c  pathinfo.c  sfs-internal.h  sfsops.c  srpc.c  suidconnect.c  suio.c  suio.h
libtame/: .svnignore  Makefile.am  Makefile.am.m4  README  aio.T  autocb.h  cfork.C  closure.C  connectors.T  core.C  event.C  event_green.C  event_opt.C  init.C  io.T  leak.C  lock.T  lock.h  mkcfork_ag.pl  mkevent.C  mkevent.pl  mktfork_ag.pl  pipeline.C  pipeline.T  pipeline.Th  pipeline.h  pipeline3.T  profiler.C  recycle.C  rpcserver.T  run.C  tame.h  tame_aio.h  tame_autocb.h  tame_cancel.h  tame_cfork.h  tame_closure.h  tame_connectors.Th  tame_connectors.h  tame_core.C  (+28 more)
patch/: adhoc-rpc-patch  alt-coders-0-1  devirt-patch  leak-patch  rpcc-named-field-0-1  xdr-disaster-0-1  xdr_v_t-better-attempt-0-1  xdr_v_t-better-attempt-0-3
rpcc/: Makefile.am  gencfile.C  genheader.C  genpyc.C  genpycfile.C  genpython.C  parse.yy  rpcc.C  rpcc.h  scan.ll
sfsmisc/: Makefile.am  afsnode.h  agentconn.h  agentmisc.C  agentmisc.h  attrcache.C  findfs.C  mallock.C  nfsserv.C  nfsserv.h  nfstrans.C  pathexpand.C  rex.h  rexchan.C  sfsclient.C  sfsclient.h  sfsclientauth.C  sfsconnect.C  sfsconnect.h  sfsconst.C  sfsconst_stub.C  sfscrypt.h  sfskeyfetch.C  sfskeymgr.C  sfskeymgr.h  sfskeymisc.C  sfsmisc.h  sfspath.C  sfsschnorr.C  sfsschnorr.h  sfsserv.C  sfsserv.h  sfssrpconnect.C  suidgetfd.C  unixserv.C
svc/: Makefile.am.m4  nfs3_prot.x
tame/: Makefile.am  TODO  const.C  output.C  parse.yy  processor.C  scan.ll  tame.C  tame.h
tests/: Makefile.am  test_armor.C  test_barrett.C  test_bbuddy.C  test_bitvec.C  test_blowfish.C  test_cgc.C  test_cgc2.C  test_esign.C  test_montgom.C  test_mpz_square.C  test_passfd.C  test_rabin.C  test_rctree.C  test_rxx.C  test_sha1.C  test_sp1.C  test_sp2.C  test_tame.T  test_tiger.C  test_timecb.C  test_vec.C
tools/: Makefile.am
tools/logger/: Makefile.am  Makefile.in  logger.C
tools/ncpp/: Makefile.am  ncpp.T
tools/rtftp/: Makefile.am  cli.T  rtftp.h  rtftp.x  rtftp_prot.C  rtftp_prot.h  rtftp_prot.x  rtftpc.T  srv.T  util.C
tools/tinetd/: Makefile.am  log.C  tinetd.T  tinetd.h
tutorial/: .cvsignore  Makefile.am  Makefile.am.m4  bench1.T  buggy1.T  buggy10.T  buggy1a.T  buggy1b.T  buggy1c.T  buggy2.T  buggy3.T  cnc.T  conftabtst.C  connect1.T  dnstest.T  ex1.T  ex1.W  ex10.T  ex11.T  ex12.T  ex13.T  ex14.T  ex16.T  ex17.T  ex2.T  ex2.W  ex2_prot.x  ex2_srv.C  ex3.T  ex3.W  ex3b.T  ex4.T  ex4.W  ex4m.C  ex5.T  ex6.T  ex7.T  ex8.T  ex9.T  ex_prot.x  (+17 more)
unwrap/: .cvsignore  Makefile.am  TODO  parse.yy  processor.C  scan.ll  unwrap.C  unwrap.h
(+510 files in other folders)
